# mcp-agent-security-kit

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
docs/: agent-identity-model.md  agent-tool-incident-response-playbook.md  agent-tool-permission-recertification.md  allowed-tool-drift.md  broad-auth-scopes.md  browser-debugging-exposure.md  browser-profile-exposure.md  ci-cd-credential-context.md  cloud-cli-credential-context.md  cloud-metadata-exposure.md  container-runtime-socket-exposure.md  control-matrix.md  credential-path-exposure.md  database-client-credential-context.md  env-file-exposure.md  external-action-approval.md  git-credential-helper-exposure.md  json-output-contract.md  kubernetes-service-account-exposure.md  launch-checklist.md  launch-plan.md  mcp-audit-evidence-retention.md  mcp-server-change-approval.md  owner-remediation-summary.md  package-registry-credential-context.md  runtime-monitoring.md  secure-mcp-server-onboarding.md  severity-overrides.md  ssh-agent-socket-exposure.md  threat-model.md  threat-scenarios.md  tool-permission-review-worksheet.md
examples/: allowed-tools-baseline.json  allowed-tools-current.json  mcp-config-local-patterns.json  mcp-config-remote-patterns.json  mcp-config-risky.json  mcp-config-safer.json  severity-overrides.json
schema/: audit-output.schema.json
scripts/: compare_allowed_tools.py  validate_json_output.py
src/mcp_agent_security_kit/: __init__.py  audit.py
tests/: test_audit.py
