[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-agent-security-kit"
version = "0.1.0"
description = "Practical audit tools and controls for securing MCP servers and agentic AI tool access."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Musaab Hasan" }]
keywords = ["mcp", "agentic-ai", "ai-security", "prompt-injection", "governance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = []

[project.scripts]
mcp-agent-audit = "mcp_agent_security_kit.audit:main"

[tool.setuptools.packages.find]
where = ["src"]
